# CPGAlg

./: .gitignore  CMakeLists.txt  README.md
include/: blockmethod.c  blockmethod.hpp  hashmap.h  key.h  puts.h  puts.hpp
include/KGB/: KeySplit.h
include/how/: "key"_avrasm.asm  "main"_avrgcc.asm
py_prototype/: keysplit.py  puts.py
src/: hashmap.c  main.c
src/py_prototype/: main.py
test/: keygen.c
